--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,27 +1,35 @@
 .area {
   text-align: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  justify-content: center;
+  align-content: center;
 }
 
-.status {
-  border: 2px solid blue;
-}
+.reset-button {
+  padding: 15px;
 
-.winner {
-  border: 2px solid green;
+  background-color: transparent;
+  background-color: rgb(201, 201, 201);
+  color: #000;
+  border: 0;
+  border-top: 2px solid red;
 }
 
 .status,
 .winner {
-  padding: 10px;
-  margin: 20px 0;
+  padding: 20px;
+  background-color: rgb(201, 201, 201);
+  color: #000;
 }
-
-.reset-button {
-  padding: 10px 30px;
-  border-width: 1px;
-  border-style: solid;
-  border-color: red;
-  margin: 20px 0;
+.winner span,
+.status span {
+  color: blue;
 }
 
 .board {
@@ -40,6 +48,8 @@
   align-items: center;
   justify-content: center;
   color: blue;
-  padding: 20px;
-  font-size: 20px;
+  padding: 50px;
+  font-size: 40px;
+  transition: all 1s ease-in-out;
+  opacity: 0.8;
 }
