--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+body,
+html {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+body {
+  background-color: #1e1e1e;
+  background-attachment: fixed;
+  background-image: url("assets/play-g5930c64bb_1280.jpg");
+}
+
+* {
+  box-sizing: border-box;
+  color: #fff;
+
+  font-size: 20px;
+}
